# trading

./: .dockerignore  .env.example  .gitignore  .gitignore copy  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/dashboard/: Dockerfile
apps/relay/: app.py  start.sh
apps/runtime/: cli.py  runtime.py
apps/watchdog/: checks.py  main.py
backtests/: _import_hook.py
backtests/momentum/: __main__.py  _aliases.py  cli.py  config_downturn.py  config_helix.py  config_nqdtc.py  config_portfolio.py  config_vdubus.py  sweep_portfolio.py
backtests/regime/: _aliases.py  cli.py  config.py
backtests/stock/: __main__.py  _aliases.py  cli.py  config.py  config_alcb.py  config_iaric.py  config_portfolio.py
backtests/swing/: __main__.py  _aliases.py  cli.py  config.py  config_breakout.py  config_brs.py  config_helix.py  config_regime.py  config_unified.py
config/: contracts.yaml  portfolio.yaml  routing.yaml  strategies.yaml  watchdog.yaml
data/: relay.db  strategy-registry.json
data/raw/: ES_1h.parquet  ES_1m_bid_ask.parquet  ES_5m.parquet  NQ_1h.parquet  NQ_1m.parquet  (+3 more)
infra/: .env.example  init-db.sh  retention.sql
memory/: alcb_engine_methods_for_t2_port.py  alcb_p9_vs_p10_comparison.md  momentum_live_vs_backtest_misalignments.md  regime_collapse_diagnosis.md
momentum_trader/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  requirements.txt
regime/: __init__.py  config.py  context.py  engine.py  features.py  hmm.py  inference.py  integration.py  persistence.py  portfolio.py
research/: README.md
scripts/: capture_alignment_optimization_timings.py
stock_trader/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pytest.ini  requirements.txt
strategies/: contracts.py
swing_trader/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  main_multi.py  requirements.txt  run_relay.py
(+3470 files in other folders)
